--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Teambutter</h1>
+        <h1 style="text-align:center;"Teambutter</h1>
         <p></p>
 
 
