--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 style="text-align:center;"Teambutter</h1>
-        <p></p>
+        
+<h1 style="text-align:center;">Teambutter</h1>
+<p>.</p>
 
 
         <p class="view">
