--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         
-<h1 style="text-align:center;">Teambutter</h1>
+<h1 style="text-align:center;"> style="font-size:300%;">Teambutter</h1>
 <p>.</p>
 
 
