--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="wrapper">
       <header>
         
-<h1 style="text-align:center;" style="font-size:500%;">Teambutter</h1>
+<h1 style="text-align:center;" style="font-size:500%;"><i>Teambutter</i></h1>
 <p>.</p>
 
 
