--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 
 
         <p class="view">
-         <a href="https://github.com/Teambutter"> View Our GitHub Profile</a>
+         <a href="https://github.com/Teambutter"><i>View Our GitHub Profile</i> </a>
 
       </header>
       <section>
         <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to our page</h3>
 
-<p>Generally we compile roms kernel and Recovery for Sprd devices we are growing day by day these contributions started by corphish and Dreamstar and will finish with great support from people around the world</p>
+<p><i>Generally we compile roms kernel and Recovery for Sprd devices we are growing day by day these contributions started by corphish and Dreamstar and will finish with great support from people around the world</i></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Current things we are working</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Current things we are working</i></h3>
 
-<p>Currently we are updating our sources daily :p</p>
+<p><i>Currently we are updating our sources daily :p</i></p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our Work</h3>
@@ -46,19 +46,19 @@
   
 </p>
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Can I work With You</h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Can I work With You</i></h3>
 
-<p>Ofcrc you can work with us just fork our repo then make pull request then we will merged with our one</p>
+<p><i>Ofcrc you can work with us just fork our repo then make pull request then we will merged with our one</i></p>
        
-         <a class="view" href="https://github.com/Teambutter"> View Our GitHub Profile</a> 
+         <a class="view" href="https://github.com/Teambutter"><i>View Our GitHub Profile</i></a> 
          
 </p>
 <h3>
 <a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Thank You</h3>
-<p>Thanks You for Vising our site have nice day</p>
+<p><i>Thanks You for Vising our site have nice day</i></p>
       </section>
       <footer>
-       <p>All the Rights Reserved</p>
+       <p><i>All the Rights Reserved</i></p>
          </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
