--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 
         <p class="view">
-         <a href="https://github.com/Teambutter"><i>View Our GitHub Profile</i> </a>
+         <a href="https://github.com/Teambutter"><i>View Our GitHub Profile</i></a>
 
       </header>
       <section>
@@ -37,9 +37,10 @@
 <p><i>Currently we are updating our sources daily :p</i></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Our Work</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Our Work</i></h3>
 
  <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/rom-cyanogenmod-11-18-december-2015-t3273891"> CyanogenMod 11 </a>
+ 
  <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/recovery-teamwin-recovery-project-3-0-0-t3314308"> TWRP 3.0.0-0 </a>
  <p>
   
@@ -54,7 +55,7 @@
          
 </p>
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Thank You</h3>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Thank You</i></h3>
 <p><i>Thanks You for Vising our site have nice day</i></p>
       </section>
       <footer>
