--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
       <header>
         
-<h1 style="text-align:center;" style="font-size:500%;"><i>Teambutter</i></h1>
+<h1 style="text-align:center;" style="font-size:500%;"><i><font color="white">Teambutter</font></i></h1>
 <p>.</p>
 
 
