--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
 
 
         <p class="view">
-         <a href="https://github.com/Teambutter"><i>View Our GitHub Profile</i></a>
+         <a href="https://github.com/Teambutter"><i><font color="white"View Our GitHub Profile</font></i></a>
 
       </header>
       <section>
         <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to our page</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a><font color="white"Welcome to our page</font></h3>
 
-<p><i>Generally we compile roms kernel and Recovery for Sprd devices we are growing day by day these contributions started by corphish and Dreamstar and will finish with great support from people around the world</i></p>
+<p><i><font color="white"Generally we compile roms kernel and Recovery for Sprd devices we are growing day by day these contributions started by corphish and Dreamstar and will finish with great support from people around the world</font></i></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Current things we are working</i></h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i><font color="white"Current things we are working</font></i></h3>
 
 <p><i>Currently we are updating our sources daily :p</i></p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Our Work</i></h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i><font color="white"Our Work</font></i></h3>
 
- <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/rom-cyanogenmod-11-18-december-2015-t3273891"> CyanogenMod 11 </a>
+ <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/rom-cyanogenmod-11-18-december-2015-t3273891"><font color="white"CyanogenMod 11</font></a>
  
- <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/recovery-teamwin-recovery-project-3-0-0-t3314308"> TWRP 3.0.0-0 </a>
+ <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/recovery-teamwin-recovery-project-3-0-0-t3314308"><font color="white"TWRP 3.0.0-0</font></a>
  <p>
   
   
@@ -50,17 +50,17 @@
 <h3>
 <a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Can I work With You</i></h3>
 
-<p><i>Ofcrc you can work with us just fork our repo then make pull request then we will merged with our one</i></p>
+<p><i><font color="white"Ofcrc you can work with us just fork our repo then make pull request then we will merged with our one</font></i></p>
        
-         <a class="view" href="https://github.com/Teambutter"><i>View Our GitHub Profile</i></a> 
+         <a class="view" href="https://github.com/Teambutter"><i><font color="white"View Our GitHub Profile</font></i></a> 
          
 </p>
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Thank You</i></h3>
-<p><i>Thanks You for Vising our site have nice day</i></p>
+<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a><i><font color="white"Thank You</font></i></h3>
+<p><i><font color="white"Thanks You for Vising our site have nice day</font></i></p>
       </section>
       <footer>
-       <p><i>All the Rights Reserved</i></p>
+       <p><i><font color="white"All the Rights Reserved</font></i></p>
          </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
