--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i><font color="white">Current things we are working</font></i></h3>
 
-<p><i>Currently we are updating our sources daily :p</i></p>
+<p><i><font color="white">Currently we are updating our sources daily :p</font></i></p>
 
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a><i><font color="white">Our Work</font></i></h3>
 
  <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/rom-cyanogenmod-11-18-december-2015-t3273891"><font color="white">CyanogenMod 11</font></a>
+ 
+ 
  
  <a class="view" href="http://forum.xda-developers.com/galaxy-star/orig-development/recovery-teamwin-recovery-project-3-0-0-t3314308"><font color="white">TWRP 3.0.0-0</font></a>
  <p>
@@ -48,7 +50,7 @@
   
 </p>
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a><i>Can I work With You</i></h3>
+<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a><i><font color="white">Can I work With You</font></i></h3>
 
 <p><i><font color="white">Ofcrc you can work with us just fork our repo then make pull request then we will merged with our one</font></i></p>
        
