index: Move back image to styles, use Android fonts
Signed-off-by: corphish <d97.avinaba@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <body background="http://s33.postimg.org/cc2fiq6db/images.jpg">
+  <body>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
@@ -13,6 +13,11 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+		
+	<link href="styles/main.css" rel="stylesheet">
   </head>
   <body>
     <div class="wrapper">
