index: Add basic info
Signed-off-by: corphish <d97.avinaba@gmail.com>

--- a/index.html
+++ b/index.html
@@ -30,5 +30,23 @@
 			<li><a href="">Our Contributions</a></li>
 		</ul>
 	</div>
+	<div id="about_us">
+		<div class="info_block">
+			<div class="info_header">Who are you people?</div>
+			<div class="info_body">We are a group of people from various parts of the world, working together to bring various cool aftermarket stuff to various legacy (Android) devices.</div>
+		</div>
+		<div class="info_block">
+			<div class="info_header">What do you do?</div>
+			<div class="info_body">We specifically port higher versions of the Android OS (in form of the popular CyanogenMod) to our devices. Apart from that, some of us excel in Linux Kernel development, some of us also make Android apps. We also build recoveries and port various cool stuff to our devices. And lastly, there is this guy who does web development.</div>
+		</div>		
+		<div class="info_block">
+			<div class="info_header">On what devices do you work upon exactly?</div>
+			<div class="info_body">Well we have worked on legacy Samsung devices, and unfortunately (or fortunately), they are all based on SPRD hardware. But since we have made successfull ports to all of the devices we worked on, we are confident that we can do such to more similar devices, if only we had those devices.</div>
+		</div>
+		<div class="info_block">
+			<div class="info_header">Seems pretty cool, can I/we join you?</div>
+			<div class="info_body">Yeah sure you can. We look forward to expand our team as much as we can. We will also invite various other cool guys to our organization soon.</div>
+		</div>
+	</div>
 	</body>
 </html>
