index: Further bringup [WIP]
Signed-off-by: corphish <d97.avinaba@gmail.com>

--- a/index.html
+++ b/index.html
@@ -48,5 +48,12 @@
 			<div class="info_body">Yeah sure you can. We look forward to expand our team as much as we can. We will also invite various other cool guys to our organization soon.</div>
 		</div>
 	</div>
+	<div id="members">
+		<div class="member_panel">
+			<div class="member_header">Our Members</div>		
+			<ul class="member_block">
+			</ul>
+		</div>
+	</div>
 	</body>
 </html>
