--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
-<!doctype html>
 <html>
   <body>
   <head>
     <title>Teambutter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 		
     <link href="styles/main.css" rel="stylesheet">
   </head>
@@ -20,8 +13,8 @@
 		<li><a href="https://github.com/TeamButter"><img class="git_icon" src="http://www.iconsdb.com/icons/preview/white/github-10-xxl.png"></a><li>
 		</div>
 		<ul>
-			<li><a href="">About Us</a></li>
-			<li><a href="">Our Members</a></li>
+			<li><a href="#about_us">About Us</a></li>
+			<li><a href="#members">Our Members</a></li>
 			<li><a href="">Our Contributions</a></li>
 		</ul>
 	</div>
@@ -46,9 +39,11 @@
 	<div id="members">
 		<div class="member_panel">
 			<div class="member_header">Our Members</div>		
-			<ul class="member_block">
+			<ul id="member_block">
+			<div class="loader"><img src="data/gif/loader.gif"></div>
 			</ul>
 		</div>
 	</div>
+	<script src="js/members.js"></script>
 	</body>
 </html>
