Bring up more stuffs

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
 			</ul>
 		</div>
 	</div>
+	<div id="activity">
+		<div class="activity_panel">
+			<div class="activity_header">Recent Activity</div>		
+			<ul id="activity_block">
+				<div class="loader"><img src="data/gif/loader.gif"></div>
+			</ul>
+		</div>
+	</div>
 	<script src="js/members.js"></script>
 	</body>
 </html>
